# microgpt-under-the-microscope

./: .gitignore  pyproject.toml
docs/: deploy.html  index.html  storybook.html
