[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "microgpt-under-a-microscope"
version = "0.1.0"
description = "An educational reimplementation of microgpt with deep mechanistic observability"
authors = [{ name = "Jacob Munson" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]
